--- a/warehouseapp/app/src/main/AndroidManifest.xml
+++ b/warehouseapp/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Warehouse"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ConfigActivity"
+            android:exported="true" />
+        <activity
             android:name=".KitPoDetails"
             android:exported="true" />
         <activity
